# Dasher-Mobile

./: .gitignore  .gitmodules  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/janmurin/dashermobile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/alphabets/: alphabet.slovak.xml
app/src/main/assets/training/: training_slovak_SK.txt
app/src/main/cpp/: AndroidDasherInterface.cpp  AndroidDasherInterface.h  AndroidFileUtils.cpp  CMakeLists.txt  jni_bridge.cpp  kenlm_query_only.cmake
app/src/main/cpp/android_compat/: libintl.h
app/src/main/cpp/android_compat/sys/: timeb.h
app/src/main/java/com/janmurin/dashermobile/: DasherEngine.kt  DasherImeService.kt  DasherImeTextSink.kt  DasherPrefs.kt  DasherSessionCoordinator.kt  HostMode.kt  KenlmModelFiles.kt  MainActivity.kt  NativeBridge.kt  SettingsActivity.kt  TiltInputProvider.kt
app/src/main/java/com/janmurin/dashermobile/ui/: DasherCanvasView.kt  DasherHostUi.kt  SettingsScreen.kt
app/src/main/java/com/janmurin/dashermobile/ui/theme/: Color.kt  Theme.kt  (+1 more)
app/src/main/res/drawable/: content_copy_24px.xml
app/src/main/res/font/: inter.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: dasher_ime.xml
app/src/test/java/com/janmurin/dashermobile/: ExampleUnitTest.kt
docs/: TestingInstructionsSK.md  architecture.puml
docs/sampled_sentences_sk/: sample_1.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_2.txt  sample_3.txt  sample_4.txt  sample_5.txt  sample_6.txt  sample_7.txt  sample_8.txt  sample_9.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
